--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -11,6 +11,12 @@
 </p>
 
 <ul>
+  <% @person.email_addresses.each do |email| %>
+    <li><%= email.address %></li>
+  <% end %>
+</ul>
+
+<ul>
   <% @person.phone_numbers.each do |phone| %>
     <li><%= phone.number %>
         <%= link_to('edit', edit_phone_number_path(phone)) %>
