--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -16,10 +16,9 @@
     <%= f.text_field :address %>
   </div>
   <div class="field">
-    <%= f.label :person_id %><br>
-    <%= f.number_field :person_id %>
+    <%= f.hidden_field :person_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit" %>
   </div>
 <% end %>
